test/zinc_source/compile_errors/operators/20_unsupported_bang_operator.zn
// expected-error: operator '!' cannot be overloaded

struct Flag {
    value: true

    fn operator!() -> bool {
        return true
    }
}

fn main() {
    flag = Flag {}
}
